Spacing fix where HRs where to spaced on laptop

--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -76,8 +76,8 @@ $spacing-laptop: (
 	mini   : 20px,
 	tiny   : 45px,
 	small  : 60px,
-	medium : 80px,
-	large  : 100px
+	medium : 70px,
+	large  : 90px
 );
 
 $spacing-tb1: (
